--- a/css/base.css
+++ b/css/base.css
@@ -192,11 +192,11 @@ dd {
 
 /* WebP未対応のブラウザ用のスタイル */
 .no-webp .element {
-  background-image: url("image.jpg");
+  background-image: url("../images/background.jpg");
 }
 
 /* WebP対応のブラウザ用のスタイル */
 .webp .element {
-  background-image: url("image.webp");
+  background-image: url("../images/background.webp");
 }
 /*# sourceMappingURL=base.css.map */
