--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,14 @@ body {
   font-family: "Yuji Syuku", serif;
   color: #3A2B27;
   line-height: 1.5;
+}
+
+.mv {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/background.webp);
+}
+.no-webp .mv {
   background-image: url(../images/background.jpg);
 }
 
@@ -199,4 +207,5 @@ dd {
 /* WebP対応のブラウザ用のスタイル */
 .webp .element {
   background-image: url("../images/background.webp");
-}/*# sourceMappingURL=base.css.map */
+}
+/*# sourceMappingURL=base.css.map */
