--- a/css/base.scss
+++ b/css/base.scss
@@ -9,7 +9,15 @@ body{
   font-family: 'Yuji Syuku', serif;
   color:#3A2B27;
   line-height: 1.5;
+}
+
+.mv{
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/background.webp);
+  .no-webp & {
   background-image: url(../images/background.jpg);
+  }
 }
 
 img{
