--- a/css/base.scss
+++ b/css/base.scss
@@ -13,7 +13,7 @@ body{
 
 .mv{
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   background-image: url(../images/background.webp);
   .no-webp & {
   background-image: url(../images/background.jpg);
