--- a/css/base.scss
+++ b/css/base.scss
@@ -12,7 +12,7 @@ body{
 }
 
 .mv{
-  width: 100%;
+  // width: 100%;
   // height: 100vh;
   background-image: url(../images/background.webp);
   .no-webp & {
