--- a/css/base.css
+++ b/css/base.css
@@ -14,6 +14,13 @@ body {
   min-height: 100vh;
 }
 
+.screen {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+  min-height: 100vh;
+}
+
 .mv {
   background-image: url(../images/background.webp);
 }
