--- a/css/base.scss
+++ b/css/base.scss
@@ -9,10 +9,10 @@ body{
   font-family: 'Yuji Syuku', serif;
   color:#3A2B27;
   line-height: 1.5;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
-  min-height: 100vh;
+  // display: grid;
+  // grid-template-rows: auto 1fr auto;
+  // grid-template-columns: 100%;
+  // min-height: 100vh;
 }
 
 .screen{
