--- a/css/base.css
+++ b/css/base.css
@@ -2,11 +2,12 @@
 /* common */
 html {
   font-size: 100%;
+  scroll-padding-top: 50px;
 }
 
 body {
   font-family: "Yuji Syuku", serif;
-  color: #3A2B27;
+  color: #3a2b27;
   line-height: 1.5;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -60,7 +61,8 @@ footer {
   font-size: 87.5%;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: 87.5%;
   margin: 87.5%;
   font-weight: 600;
@@ -82,7 +84,9 @@ h1, h2 {
   padding-bottom: 110px;
 }
 
-p, dd, dt {
+p,
+dd,
+dt {
   margin-left: 20px;
   font-weight: 600;
   font-size: 17px;
@@ -142,6 +146,7 @@ dd {
 
 #page-link {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding: 10px;
 }
@@ -149,7 +154,7 @@ dd {
   list-style: none;
 }
 #page-link li a {
-  color: #3A2B27;
+  color: #3a2b27;
   padding: 0 20px;
   text-decoration: none;
 }
@@ -157,25 +162,25 @@ dd {
   content: "▼";
   font-size: 0.8rem;
   padding: 0 10px 0 0;
-  color: #3A2B27;
+  color: #3a2b27;
 }
 
 .top {
   list-style: none;
   display: inline-block;
-  background-color: #3A2B27;
+  background-color: #3a2b27;
   margin: 20px;
   border-radius: 50%;
 }
 .top a {
-  color: #F8F9FA;
+  color: #f8f9fa;
   padding: 0 20px;
   text-decoration: none;
 }
 .top a::before {
   content: "▲";
   font-size: 0.8rem;
-  color: #F8F9FA;
+  color: #f8f9fa;
 }
 
 .qr {
