--- a/css/base.scss
+++ b/css/base.scss
@@ -1,13 +1,14 @@
 @charset "utf-8";
 
 /* common */
-html{
+html {
   font-size: 100%;
+  scroll-padding-top: 50px;
 }
 
-body{
-  font-family: 'Yuji Syuku', serif;
-  color:#3A2B27;
+body {
+  font-family: "Yuji Syuku", serif;
+  color: #3a2b27;
   line-height: 1.5;
 
   display: grid;
@@ -16,70 +17,70 @@ body{
   min-height: 100vh;
 }
 
-.mv{
+.mv {
   // width: 100%;
   // height: 100vh;
   background-image: url(../images/background.webp);
   .no-webp & {
-  background-image: url(../images/background.jpg);
+    background-image: url(../images/background.jpg);
   }
 }
 
-img{
+img {
   width: 100%;
   height: auto;
 }
 
-footer{
+footer {
   width: 100%;
 }
 
-.wrapper{
+.wrapper {
   max-width: 940px;
   margin: 0 auto;
   padding: 0 10px;
 }
 
 /*Twitterタイムライン中央寄せ*/
-.twitter-timeline{
-margin:0px auto;
+.twitter-timeline {
+  margin: 0px auto;
 }
 
-.icon{
-  width:70px;
+.icon {
+  width: 70px;
   border-radius: 10%;
   margin: 0;
 }
 
-.documents{
+.documents {
   width: 1000px;
   margin: auto;
 }
 
-.icon{
+.icon {
   width: 60px;
 }
 
-.introduction{
+.introduction {
   font-size: 87.5%;
 }
 
-h1, h2{
+h1,
+h2 {
   font-size: 87.5%;
   margin: 87.5%;
   font-weight: 600;
 }
 
-
-.mail{
+.mail {
   pointer-events: none;
 }
 
-.introduction{
+.introduction {
   font-size: 30px;
 }
 
-.bg-img{
+.bg-img {
   background-image: url(../images/main.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
@@ -87,126 +88,128 @@ h1, h2{
   padding-bottom: 110px;
 }
 
-p,dd,dt{
+p,
+dd,
+dt {
   margin-left: 20px;
   font-weight: 600;
   font-size: 17px;
 }
 
-h1{
+h1 {
   font-size: 28px;
   margin: 20px 0 20px 0;
-  border-bottom:2px solid;
+  border-bottom: 2px solid;
 }
 
-h2{
+h2 {
   font-size: 24px;
   margin: 20px 0 10px 10px;
-  border-bottom:2px solid;
+  border-bottom: 2px solid;
 }
 
-img.award{
+img.award {
   width: 300px;
 }
 
-.information{
-  margin:15px 10px 10px 20px;
+.information {
+  margin: 15px 10px 10px 20px;
 }
 
-
 /* responsive */
-@media(max-width:1050px) {
-  .documents{
+@media (max-width: 1050px) {
+  .documents {
     width: auto;
   }
 }
 
-@media(max-width:600px){
-  html{
+@media (max-width: 600px) {
+  html {
     font-size: 87.5%;
   }
 }
 
-@media(max-width:350px){
-  img.award{
+@media (max-width: 350px) {
+  img.award {
     margin: auto;
     max-width: 100%;
     height: auto;
   }
 }
 
-.twitter{
+.twitter {
   margin-left: 30px;
   margin-right: 30px;
 }
 
-dd{
+dd {
   margin-left: 35px;
 }
 
-#members{
-  border-bottom:2px solid;
+#members {
+  border-bottom: 2px solid;
   padding-bottom: 20px;
 }
 
-#page-link{
+#page-link {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding: 10px;
 
-  & li{
+  & li {
     list-style: none;
-    & a{
-      color:#3A2B27;
-      padding:0 20px;
+    & a {
+      color: #3a2b27;
+      padding: 0 20px;
       text-decoration: none;
-      &::before{
-        content:'▼';
-        font-size:0.8rem;
-        padding:0 10px 0 0;
-        color:#3A2B27;
+      &::before {
+        content: "▼";
+        font-size: 0.8rem;
+        padding: 0 10px 0 0;
+        color: #3a2b27;
       }
     }
   }
 }
 
-.top{
+.top {
   list-style: none;
   display: inline-block;
-  background-color: #3A2B27;
+  background-color: #3a2b27;
   margin: 20px;
   border-radius: 50%;
-  & a{
-    color:#F8F9FA;
-    padding:0 20px;
+  & a {
+    color: #f8f9fa;
+    padding: 0 20px;
     text-decoration: none;
-    &::before{
-      content:'▲';
-      font-size:0.8rem;
-      color:#F8F9FA;
+    &::before {
+      content: "▲";
+      font-size: 0.8rem;
+      color: #f8f9fa;
     }
   }
 }
 
-.qr{
+.qr {
   width: 100px;
 }
 
-.url{
+.url {
   font-weight: 600;
 }
 
-.flex{
+.flex {
   display: flex;
   flex-direction: column;
   margin: auto;
 }
 
-.sns{
+.sns {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  & a{
+  & a {
     margin: auto;
   }
 }
