--- a/css/base.scss
+++ b/css/base.scss
@@ -48,7 +48,7 @@ footer {
 
 .icon {
   width: 70px;
-  border-radius: 25%;
+  border-radius: 30%;
   margin: 0;
 }
 
@@ -69,6 +69,7 @@ h1,
 h2 {
   font-size: 87.5%;
   margin: 87.5%;
+  padding-top: 15px;
   font-weight: 600;
 }
 
