--- a/css/base.css
+++ b/css/base.css
@@ -44,7 +44,7 @@ footer {
 
 .icon {
   width: 70px;
-  border-radius: 25%;
+  border-radius: 30%;
   margin: 0;
 }
 
@@ -65,6 +65,7 @@ h1,
 h2 {
   font-size: 87.5%;
   margin: 87.5%;
+  padding-top: 15px;
   font-weight: 600;
 }
 
