--- a/css/base.css
+++ b/css/base.css
@@ -150,6 +150,7 @@ dd {
   flex-wrap: wrap;
   justify-content: center;
   padding: 10px;
+  font-size: 105%;
 }
 #page-link li {
   list-style: none;
