--- a/css/base.css
+++ b/css/base.css
@@ -69,6 +69,10 @@ h2 {
   font-weight: 600;
 }
 
+#members h2 {
+  padding-top: 0;
+}
+
 .mail {
   pointer-events: none;
 }
@@ -105,7 +109,7 @@ h2 {
   border-bottom: 2px solid;
 }
 
-img.award {
+img.record {
   width: 300px;
 }
 
