--- a/css/base.scss
+++ b/css/base.scss
@@ -72,6 +72,11 @@ h2 {
   padding-top: 15px;
   font-weight: 600;
 }
+#members {
+  & h2 {
+    padding-top: 0;
+  }
+}
 
 .mail {
   pointer-events: none;
@@ -109,7 +114,7 @@ h2 {
   border-bottom: 2px solid;
 }
 
-img.award {
+img.record {
   width: 300px;
 }
 
